[tool.poetry]
name = "rymovnik"
version = "0.9.0"
description = "A simple script to search for words in the dictionary based on criteria."
authors = ["Lukáš Růžička <lruzicka@redhat.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
